# OPC_UA_DataCenter

./: CMakeLists.txt  PROJECT_CONSTITUTION.md  config  nodes.txt  readme.md
code/: main.cpp
code/data_collector/kafka_producer/: kafka_producer.cpp  kafka_producer.hpp
code/data_collector/opcua_client/: client.hpp  config.cpp  config.hpp  data_collector.cpp  data_collector.hpp  data_point.cpp
code/data_processor/: main.cpp
code/data_processor/kafka_consumer/: kafka_consumer.cpp  kafka_consumer.hpp
code/data_processor/redis_client/: redis_client.cpp  redis_client.hpp
code/data_processor/utilities/: config.cpp  config.hpp  json_parser.cpp  json_parser.hpp
code/opcua_client/: client.cpp  data_collector.hpp  data_point.hpp
docs/: OPC_UA_COLLECTOR_README.md  PROJECT_CONSTITUTION.md  architecture.md
docs/design/: high_level_design.md
docs/planning/: implementation_plan.md
src/: main.cpp
src/opcua/: config.cpp  config.hpp  data_collector.cpp
